# ValueScope

./: README.md  pyproject.toml
src/experiment/: __init__.py  annotate_generated_gt.py  benchmark_builder.py  commit_diff_extractor.py  config.yaml  data_loader.py  dataset_stats_paper_format.py  ds_stats.py  evaluator.py  iaa_data_structures.py  iaa_experiment.py  iaa_metrics.py  iaa_report_generator.py  llm_client.py  main_experiment.py  paths.py  pipeline_evaluator.py  report_generator.py  requirements.txt  run_experiment.py  stat_tests.py  test_iaa.py  traditional_baselines.py  unified_pipeline.py
src/experiment/profile_experiment/: __init__.py  exp1_characterization.py  exp2_cross_model.py  exp4_downstream.py  profile_generator.py  profile_metrics.py  profile_visualizer.py  run_all.py
src/valueguard/: __init__.py  __main__.py
src/valueguard/adapters/: __init__.py  cli.py  github_action.py
src/valueguard/agents/: __init__.py  base_agent.py  evidence_agent.py  hypothesis_agent.py  profiler_agent.py
src/valueguard/config/: agents.yaml  skills.yaml
src/valueguard/core/: __init__.py  config.py  dispatcher.py  exceptions.py  models.py
src/valueguard/memory/: __init__.py  analysis_history.py  manager.py  pattern_memory.py  project_profile.py
src/valueguard/output/: __init__.py  github_comment.py  reporter.py
src/valueguard/skills/: __init__.py  ast_analysis.py  base_skill.py  code_chunking.py  doc_collector.py  json_parser.py  llm_call.py  registry.py  value_model.py  vector_search.py
tables/: L2_Value_Themes.csv  L3_system_value_themes.csv
(+646 files in other folders)
