[project]
name = "valuescope"
version = "0.1.0"
description = "ValueScope: A Multi-Agent System for Value-Oriented Analysis in Software Projects"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pyyaml>=6.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
experiment = [
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
