[project]
name = "value_hypothesis_bot"
version = "0.1.0"
description = "ValueGuard value-risk identification experiments"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.3",
    "rank-bm25>=0.2.2",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/experiment", "src/valueguard"]
